--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--Заголовок-->
         <header class="header">
             <div class="navbar container">
-                <a href="0#"> <img class="logo" src="/img/noemi-logo.svg" alt="logo"></a>
+                <a href="0#"> <img class="logo" src="img/noemi-logo.svg" alt="logo"></a>
                 <nav class="menu">
                     <ul class="menu-list">
                         <li class="menu-item"><a href="0#" class="menu-link">Главная</a></li>
@@ -93,7 +93,7 @@
 
                 <main class="main">
                     <article class="article">
-                        <img class="article-image" src="/img/last-post1.jpg" alt="dawn">
+                        <img class="article-image" src="img/last-post1.jpg" alt="dawn">
                         <div class="article-text">
                             <ul class="article-menu">
                                 <li class="article-item"><a class="article-link" href="0#">travel </a></li>
@@ -108,7 +108,7 @@
                         </div>
                     </article>
                     <article class="article">
-                        <img class="article-image" src="/img/last-post2.jpg" alt="joga">
+                        <img class="article-image" src="img/last-post2.jpg" alt="joga">
                         <div class="article-text">
                             <ul class="article-menu">
                                 <li class="article-item"><a class="article-link" href="0#">health </a></li>
@@ -123,7 +123,7 @@
                         </div>
                     </article>
                     <article class="article">
-                        <img class="article-image" src="/img/last-post3.jpg" alt="joga">
+                        <img class="article-image" src="img/last-post3.jpg" alt="joga">
                         <div class="article-text">
                             <ul class="article-menu">
                                 <li class="article-item"><a class="article-link" href="0#">music </a></li>
@@ -138,7 +138,7 @@
                         </div>
                     </article>
                     <article class="article">
-                        <img class="article-image" src="/img/last-post4.jpg" alt="kitchen">
+                        <img class="article-image" src="img/last-post4.jpg" alt="kitchen">
                         <div class="article-text">
                             <ul class="article-menu">
                                 <li class="article-item"><a class="article-link" href="0#">lifestyle </a></li>
@@ -153,7 +153,7 @@
                         </div>
                     </article>
                     <article class="article">
-                        <img class="article-image" src="/img/last-post5.jpg" alt="pillow">
+                        <img class="article-image" src="img/last-post5.jpg" alt="pillow">
                         <div class="article-text">
                             <ul class="article-menu">
                                 <li class="article-item"><a class="article-link" href="0#">lifestyle </a></li>
@@ -177,35 +177,35 @@
                     <section class="sidebar-cards">
                         <h3 class="sidebar-header">новые посты</h3>
                         <article class="sidebar-card">
-                            <img class="card-image" src="/img/aside-1.jpg">
+                            <img class="card-image" src="img/aside-1.jpg">
                             <div class="card-info">
                                 <time class="card-date">14 июня 2019</time>
                                 <h4 class="card-title"><a class="card-title-link" href="0#">10 мест, ради которых стоит проснуться</a></h4>
                             </div>
                         </article>
                         <article class="sidebar-card">
-                            <img class="card-image" src="/img/aside-2.jpg">
+                            <img class="card-image" src="img/aside-2.jpg">
                             <div class="card-info">
                                 <time class="card-date">14 июня 2019</time>
                                 <h4 class="card-title"><a class="card-title-link" href="0#">йога для домашних тренировок</a></h4>
                             </div>
                         </article>
                         <article class="sidebar-card">
-                            <img class="card-image" src="/img/aside-3.jpg">
+                            <img class="card-image" src="img/aside-3.jpg">
                             <div class="card-info">
                                 <time class="card-date">14 июня 2019</time>
                                 <h4 class="card-title"><a class="card-title-link" href="0#">как мы превратили классное место в балкон</a></h4>
                             </div>
                         </article>
                         <article class="sidebar-card">
-                            <img class="card-image" src="/img/aside-4.jpg">
+                            <img class="card-image" src="img/aside-4.jpg">
                             <div class="card-info">
                                 <time class="card-date">14 июня 2019</time>
                                 <h4 class="card-title"><a class="card-title-link" href="0#">кулинарный подход к науке</a></h4>
                             </div>
                         </article>
                         <article class="sidebar-card">
-                            <img class="card-image" src="/img/aside-5.jpg">
+                            <img class="card-image" src="img/aside-5.jpg">
                             <div class="card-info">
                                 <time class="card-date">14 июня 2019</time>
                                 <h4 class="card-title"><a class="card-title-link" href="0#">лучшие прически для распущенных волос</a></h4>
@@ -274,9 +274,9 @@
                 <div class="shop-cards">
                     <div class="shop-card">
                         <picture>
-                            <source media="(max-width: 640px)" srcset="/img/shop-item-mobile1.jpg">
-                            <source media="(min-width: 641px) and (max-width: 1200px)" srcset="/img/shop-item-tablet1.jpg">
-                            <img class="shop-cards-image" src="/img/shop-item-desk1.jpg" alt="pillow">
+                            <source media="(max-width: 640px)" srcset="img/shop-item-mobile1.jpg">
+                            <source media="(min-width: 641px) and (max-width: 1200px)" srcset="img/shop-item-tablet1.jpg">
+                            <img class="shop-cards-image" src="img/shop-item-desk1.jpg" alt="pillow">
                         </picture>
                         <div class="shop_content">
                             <div class="shop-body">
@@ -295,9 +295,9 @@
                     </div>
                     <div class="shop-card">
                         <picture>
-                            <source media="(max-width: 640px)" srcset="/img/shop-item-mobile2.jpg">
-                            <source media="(min-width: 641px) and (max-width: 1200px)" srcset="/img/shop-item-tablet2.jpg">
-                            <img class="shop-cards-image" src="/img/shop-item-desk2.jpg" alt="toy-rabbit">
+                            <source media="(max-width: 640px)" srcset="img/shop-item-mobile2.jpg">
+                            <source media="(min-width: 641px) and (max-width: 1200px)" srcset="img/shop-item-tablet2.jpg">
+                            <img class="shop-cards-image" src="img/shop-item-desk2.jpg" alt="toy-rabbit">
                         </picture>
                         <div class="shop_content">
                             <div class="shop-body">
@@ -315,9 +315,9 @@
                     </div>
                     <div class="shop-card">
                         <picture>
-                            <source media="(max-width: 640px)" srcset="/img/shop-item-mobile3.jpg">
-                            <source media="(min-width: 641px) and (max-width: 1200px)" srcset="/img/shop-item-tablet3.jpg">
-                            <img class="shop-cards-image" src="/img/shop-item-desk3.jpg" alt="photoframe">
+                            <source media="(max-width: 640px)" srcset="img/shop-item-mobile3.jpg">
+                            <source media="(min-width: 641px) and (max-width: 1200px)" srcset="img/shop-item-tablet3.jpg">
+                            <img class="shop-cards-image" src="img/shop-item-desk3.jpg" alt="photoframe">
                         </picture>
                         <div class="shop_content">
                             <div class="shop-body">
@@ -342,36 +342,36 @@
                 <div id="popup" class="popup">
                     <div class="popup_body">
                         <div class="popup_content">
-                            <a href="#" class="popup_close"><img class="popup_close_img" src="/img/form-x.svg" alt=""></a>
+                            <a href="#" class="popup_close"><img class="popup_close_img" src="img/form-x.svg" alt=""></a>
                             <h4 class="popup_title trends-title"> наш фидбек</h4>
                             <form action="#" class="popup_form">
                                 <div class="popup_form_row">
                                     <label class="popup_form_group">
-                    <span class="popup_form_hint">Как часто вы заходите на сайт?</span>
-                    <select class="select">
-                       <option selected>Почти каждый день</option>
-                       <option >Раз в несколько дней</option>
-                       <option >Раз в несколько недель</option>
-                       <option >Несколько раз в год</option>                       
-                   </select>
-                </label>
+                                      <span class="popup_form_hint">Как часто вы заходите на сайт?</span>
+                                      <select class="select">
+                                        <option selected>Почти каждый день</option>
+                                        <option >Раз в несколько дней</option>
+                                        <option >Раз в несколько недель</option>
+                                        <option >Несколько раз в год</option>                       
+                                     </select>
+                                </label>
                                 </div>
                                 <div class="popup_form_row">
                                     <span class="popup_form_hint">Вы подписаны на e-mail рассылку?</span>
                                     <label class="popup_radio_group">                    
-                <input type="radio" class="radio" name="popup_radio_group">
-                <span class="radio_group_text">Да</span>
-                </label>
+                                    <input type="radio" class="radio" name="popup_radio_group">
+                                    <span class="radio_group_text">Да</span>
+                                    </label>
                                     <label class="popup_radio_group">                    
-                <input type="radio" class="radio" name="popup_radio_group">
-                <span class="radio_group_text">Нет</span>
-                </label>
+                                        <input type="radio" class="radio" name="popup_radio_group">
+                                        <span class="radio_group_text">Нет</span>
+                                    </label>
                                 </div>
                                 <div class="popup_form_row">
                                     <label class="popup_form_group">
-                    <span class="popup_form_hint" >Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
-                    <textarea class="popup_form_field" placeholder="Может, больше рецептов?" required></textarea>                   
-                </label>
+                                        <span class="popup_form_hint" >Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
+                                        <textarea class="popup_form_field" placeholder="Может, больше рецептов?" required></textarea>                   
+                                    </label>
                                 </div>
                                 <button class="popup_form_button" type="submit">Отправить</button>
                             </form>
